# stacks

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
.cargo/: config.toml
examples/: button.rs  paragraph.rs  stacks_demo.rs  textedit.rs  ui.rs
src/: framework.rs  game.rs  lib.rs  main.rs  stacks.rs  utils.rs
src/application/: input.rs  input_state.rs  mod.rs  time.rs
src/canvas/: mod.rs
src/components/: composite.rs  metrics.rs  mod.rs  parallax.rs  text.rs  transform.rs
src/components/shapes/: mod.rs  rect.rs  throbber.rs
src/framework/: audio.rs  components.rs  music.rs  resource.rs  sound.rs  widgets.rs
src/framework/components/: composite.rs  layout.rs  metrics.rs  parallax.rs  text.rs  transform.rs
src/framework/components/layout/: container.rs  h_container.rs  v_container.rs
src/framework/components/shapes/: rect.rs  throbber.rs
src/framework/resource/: stack.rs
src/framework/widgets/: audio.rs  audio_player.rs  backgrounded.rs  layout.rs  layout_size.rs  metrics.rs  parallax.rs  shapes.rs  text.rs  transform.rs  ui.rs  wrap.rs
src/framework/widgets/audio/: player.rs  sound.rs
src/framework/widgets/layout/: ab.rs  center_container.rs  contained.rs  container.rs  fullscreen_container.rs  h_container.rs  margin_container.rs  scroll_container.rs  size_fill_container.rs  v_container.rs
src/framework/widgets/shapes/: rect.rs  throbber.rs
src/framework/widgets/text/: fonts.rs
src/framework/widgets/ui/: button.rs  slider.rs  textedit.rs
src/game/: builder.rs  canvas.rs  default_font_set.rs  input.rs  mod.rs  runner.rs  time.rs
src/utils/: bottom_right.rs  center.rs  clamp_unit.rs  clamp_zero_one.rs  easing.rs  paint.rs  snap.rs  to_26dot6.rs  vector.rs
