[package]
name = "stacks"
version = "0.1.0"
authors = ["JackRedstonia <jackredstonia64@gmail.com>"]
edition = "2018"
build = "build.rs"
repository = "https://gitlab.com/JackRedstonia/stacks"
exclude = ["./examples"]
readme = "../README.md"
license = "MIT"

[profile.release]
lto = "thin"

[dependencies]
unsafe-any = "*"
unicode-linebreak = "0.1"
unicode-segmentation = "1.7"

[dependencies.skulpin-renderer]
git = "https://gitlab.com/JackRedstonia/skulpin"
default-features = false
features = ["svg"]

[dependencies.sdl2]
version = ">=0.33,<0.34.3"
features = ["bundled", "static-link", "raw-window-handle"]

[dependencies.soloud]
git = "https://gitlab.com/JackRedstonia/soloud-rs"
