[package]
name = "stacks"
version = "0.1.0"
authors = ["JackRedstonia <jackredstonia64@gmail.com>"]
edition = "2018"
repository = "https://gitlab.com/JackRedstonia/stacks"
exclude = ["./examples"]
readme = "../README.md"
license = "MIT"

[dependencies]
unsafe-any = "*"
unicode-linebreak = "0.1"
unicode-segmentation = "1.7"
glutin = "0.26"
gl-rs = { package = "gl", version = "0.14.0" }
soloud = { git = "https://gitlab.com/JackRedstonia/soloud-rs" }

[target.'cfg(target_os = "linux")'.dependencies]
# NOTE: x11 implies gl, but whatever.
skia-safe = { version = "0.40.0", features = ["gl", "x11"] }

[target.'cfg(target_os = "windows")'.dependencies]
skia-safe = { version = "0.40.0", features = ["gl"] }
